fix: super annoying jumpy home page from web fonts

--- a/django_smg/frontend/src/components/landing_page/landing_page.module.css
+++ b/django_smg/frontend/src/components/landing_page/landing_page.module.css
@@ -3,8 +3,7 @@
 }
 
 .h1 {
-  padding-bottom: 0;
-  margin: 1rem;
+  height: 221px;
   font-size: 5rem;
 }
 
